agregada entrada en la tabla de revision

--- a/charter.tex
+++ b/charter.tex
@@ -70,7 +70,7 @@ codirector, % Uncomment to add a codirector to the title page
 Revisión & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Detalles de los cambios realizados} & Fecha      \\ \hline
 1.0	& Creación del documento.						& 01/03/2022 \\ \hline
 1.1	& Se completan las secciones 1 a 5 inclusive			& 15/03/2022 \\ \hline
-%1      & Se completa hasta el punto 4 inclusive                 & dd/mm/aaaa \\ \hline
+1.2	& Se completan las secciones 6 a 9 inclusive                & 22/03/2022 \\ \hline
 %2      & Se completa hasta el punto 7 inclusive
 %		  Se puede agregar algo más \newline
 %		  En distintas líneas \newline
