correcciones de requisitos y empezada seccion 12

--- a/charter.tex
+++ b/charter.tex
@@ -217,7 +217,7 @@ Los requerimientos del proyecto se definieron luego de acordarlos con el cliente
 \begin{enumerate}
 	\item Requerimientos generales
 		\begin{enumerate}
-			\item Fecha de entrega del proyecto terminado: A definir
+			\item Todos los entregables del proyecto deben estar terminados y listos para presentarse el día TBD.
 			\item Todos los componentes del dispositivo, a excepción de la fuente de alimentación, deben estar montados sobre una carcasa de material no conductor.
 			\item El dispositivo debe poder conectarse a la red de 110V/60Hz mediante una fuente de alimentación externa.
 			\item El dispositivo, sin la fuente de alimentaciön externa, no debe pesar mas de 750 g y no debe tener mas de 15 cm de largo, 10 cm de ancho y 6 cm de alto.
@@ -250,7 +250,7 @@ Los requerimientos del proyecto se definieron luego de acordarlos con el cliente
 			\item El dispositivo debe ser apto para su uso en una sala limpia.
 			\item El dispositivo no debe generar ni emanar ningún tipo de partículas o residuo.
 			\item El dispositivo debe cumplir con la normativa vigente de compatibilidad electromagnética.
-			\item El dispositivo no debe generar altas temperaturas.
+			\item El dispositivo no debe generar temperaturas superiores a 40°C.
 		\end{enumerate}
 	\item Requerimientos de testing
 		\begin{enumerate}
@@ -495,22 +495,38 @@ Descripción &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Cantidad} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Valor unitario} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Valor total} \\ \hline
- &
+Fabricación de PCB de placa de desarrollo &
+  \multicolumn{1}{c|}{a} &
+  \multicolumn{1}{c|}{b} &
+  \multicolumn{1}{c|}{c} \\ \hline
+Placa de desarrollo STM32F429 &
   \multicolumn{1}{c|}{} &
   \multicolumn{1}{c|}{} &
   \multicolumn{1}{c|}{} \\ \hline
- &
+Display LCD &
   \multicolumn{1}{c|}{} &
   \multicolumn{1}{c|}{} &
   \multicolumn{1}{c|}{} \\ \hline
-\multicolumn{1}{|l|}{} &
-   &
-   &
-   \\ \hline
-\multicolumn{1}{|l|}{} &
-   &
-   &
-   \\ \hline
+Fuente de alimentación externa &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
+Componentes electrónicos varios &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
+Filamento PLA &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
+Fabricación de PCB de dispositivo terminado &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
+Componentes cable dispositivo a EDFA &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
 \multicolumn{3}{|c|}{SUBTOTAL} &
   \multicolumn{1}{c|}{} \\ \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -520,6 +536,14 @@ Descripción &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Cantidad} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Valor unitario} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Valor total} \\ \hline
+Gastos de importación y aduana &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
+Consumo de red eléctrica &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} &
+  \multicolumn{1}{c|}{} \\ \hline
 \multicolumn{1}{|l|}{} &
    &
    &
